kubernetes/staging/igress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceramic-api
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - ceramic-test.viaheadline.xyz
      secretName: ceramic-node-tls
  rules:
    - host: ceramic-test.viaheadline.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ceramic-node
                port:
                  number: 7007
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headline-node
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - test.viaheadline.xyz
        - www.test.viaheadline.xyz
      secretName: headline-node-tls
  rules:
    - host: test.viaheadline.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headline-node
                port:
                  number: 80
    - host: www.test.viaheadline.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headline-node
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceramic-ipfs
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - ceramic-ipfs-test.viaheadline.xyz
      secretName: ceramic-ipfs-node-tls
  rules:
    - host: ceramic-ipfs-test.viaheadline.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ceramic-ipfs
                port:
                  number: 4012
